<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- system -->
    <string name="app_name">完成</string>

    <!-- boot activity -->
    <string name="boot_title">初始化</string>

    <!-- main activity -->
    <string name="main_title">完成</string>
    <string name="main_action_add">Add</string>
    <string name="main_action_settings">Settings</string>

    <!-- create activity -->
    <string name="create_title">完成</string> 
    <string name="create_input_desc">描述</string>
    <string name="create_input_memo">备忘</string>
    <string name="create_input_location">地点</string>
    <string name="create_input_start_time">开始时间</string>
    <string name="create_input_last_time">结束时间</string>
    <string name="create_input_repeat_count">最大重复次数</string>
    <string name="create_button_confirm">添加</string>

    <!-- old -->

    <string name="user_name">用户</string>
    <string name="game_list_name">游戏列表</string>
    <string name="game_info_name">游戏详情</string>
    <string name="game_name">开始游戏</string>
    <string name="input_email">邮箱:</string>
    <string name="input_password">密码:</string>
    <string name="edit_email">xxx@xxx.xxx</string>
    <string name="edit_password">********</string>
    <string name="button_login">登陆</string>
    <string name="button_register">注册</string>
    <string name="game_list_tab1">已加入游戏</string>
    <string name="game_list_tab2">未加入游戏</string>
    <string name="button_game_info">详情</string>
    <string name="button_game_join">加入</string>
    <string name="button_enter_game">进入</string>
    <string name="game_id">游戏id</string>
    <string name="game_intro">请奔跑一百米 ... </string>
    <string name="game_start">0</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_refresh">Refreshing ... </string>

</resources>