<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="70dp"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:text="@string/input_email" />
        
        <EditText 
            android:id="@+id/edit_email"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/edit_email" />
        
    </LinearLayout>
    
    <LinearLayout
        android:paddingBottom="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:text="@string/input_password" />
        
        <EditText 
            android:id="@+id/edit_password"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword"
	        android:hint="@string/edit_password" />
        
    </LinearLayout>

    <LinearLayout
        android:paddingBottom="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
	    <Button
	        android:layout_gravity="right"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:text="@string/button_register" 
	        android:onClick="register" />
	    
	    <Button
	        android:layout_gravity="right"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:text="@string/button_login" 
	        android:onClick="login" />
    </LinearLayout>
</LinearLayout>